<resources>
    <string name="app_name">HomeTrainer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">"홈 트레이닝"</string>
    <string name="menu_challenge">"챌린지"</string>
    <string name="menu_calendar">"캘린더"</string>
    <string name="menu_record">"기록"</string>
    <string name="menu_bmi">"BMI 계산기"</string>
    <string name="menu_my_information">"내 정보"</string>

    <string name="home_man_bo">"만보기"</string>
    <string name="home_body_check">"눈바디 기록"</string>
    <string name="home_challenge_state">"챌린지 진행 상황"</string>

    <string name="challenge_one_day">"1일 챌린지"</string>
    <string name="challenge_week_day">"7일 챌린지"</string>
    <string name="challenge_month_day">"30일 챌린지"</string>

    <string name="before">"&lt;"</string>
    <string name="after">"&gt;"</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
