<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hometrainer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.hometrainer.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_challenge"
        android:name="com.example.hometrainer.ui.challenge.ChallengeFragment"
        android:label="@string/menu_challenge"
        tools:layout="@layout/fragment_challenge" />

    <fragment
        android:id="@+id/one_day_challenge"
        android:name="com.example.hometrainer.ui.challenge_one_day.OnedayFragment"
        android:label="@string/challenge_one_day"
        tools:layout="@layout/fragment_challenge_one_day" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.hometrainer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_challenge"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.example.hometrainer.ui.bmi.BMIFragment"
        android:label="BMI 계산기"
        tools:layout="@layout/fragment_bmi" />

    <fragment
        android:id="@+id/nav_record"
        android:name="com.example.hometrainer.ui.record.RecordFragment"
        android:label="기록"
        tools:layout="@layout/fragment_record" />
</navigation>