<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >
    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.challenge.ChallengeFragment">

    <TextView
        android:id="@+id/challenge_one_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:background="@color/design_default_color_background"
        android:text="@string/challenge_one_day"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />



    <ImageView
        android:id="@+id/one_day_challenge_thumbnail"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/challenge_one_day"
        android:src="@drawable/one_day_challenge_thumbnail"
        tools:ignore="MissingConstraints"
         />

    <TextView
        android:id="@+id/one_day_challenge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/one_day_challenge_thumbnail"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="50dp"
        android:text="전신 유산소 운동"
        android:textSize="17dp"
        tools:ignore="MissingConstraints" />



        <Button
        android:id="@+id/one_day_challenge_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
        android:layout_below="@id/one_day_challenge_title"
        android:text="더보기"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/first_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DB7093"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/one_day_challenge_more"/>

    <TextView
        android:id="@+id/challenge_week_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:background="@color/design_default_color_background"
        android:text="@string/challenge_week_day"
        android:layout_below="@id/first_line"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />



    <ImageView
        android:id="@+id/week_day_challenge_thumbnail"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/challenge_week_day"
        tools:ignore="MissingConstraints"
        android:src="@drawable/week_day_challenge_thumbnail"
        android:contentDescription="TODO" />

        <TextView
            android:id="@+id/week_day_challenge_title"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_line"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="95dp"
            android:layout_toRightOf="@+id/one_day_challenge_thumbnail"
            android:text="8분 전신운동"
            android:textSize="17dp"
            tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/week_day_challenge_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/week_day_challenge_title"
        android:text="더보기"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/second_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DB7093"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/week_day_challenge_more"/>

    <TextView
        android:id="@+id/challenge_month_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:background="@color/design_default_color_background"
        android:layout_below="@id/second_line"
        android:text="@string/challenge_month_day"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />


    <ImageView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/month_day_challenge_thumbnail"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/challenge_month_day"
        android:src="@drawable/month_day_challenge_thumbnail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/month_day_challenge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/month_day_challenge_thumbnail"
        android:layout_below="@id/second_line"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="50dp"
        android:text="30분 전신운동"
        android:textSize="17dp"
        tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/month_day_challenge_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/month_day_challenge_title"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:text="더보기"
            tools:ignore="MissingConstraints" />

        <View
        android:id="@+id/third_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DB7093"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/month_day_challenge_more"/>


</RelativeLayout>
</ScrollView>